--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
                         'Content-Type': 'application/json'
                     },
                     body: JSON.stringify({
-                        model: "gpt-4o-2024-08-06",
+                        model: "gpt-4o-mini-2024-07-18",
                         messages: [{"role": "user", "content": prompt}],
                         max_tokens: 500,
                         stream: true
@@ -604,7 +604,7 @@
                         'Content-Type': 'application/json'
                     },
                     body: JSON.stringify({
-                        model: "gpt-4o-2024-08-06",
+                        model: "gpt-4o-mini-2024-07-18",
                         messages: [{"role": "user", "content": prompt}],
                         max_tokens: 150,
                         stream: true
@@ -810,7 +810,7 @@ Content:
                         'Content-Type': 'application/json'
                     },
                     body: JSON.stringify({
-                        model: "gpt-4o-2024-08-06",
+                        model: "gpt-4o-mini-2024-07-18",
                         messages: [{"role": "user", "content": prompt}],
                         max_tokens: 2000
                     })
