Change Place holder

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                 <h1>PostAi</h1>
             </div>
             <div id="url-input-wrapper">
-                <input type="text" id="urlInput" placeholder="输入URL，一键生成高质量社媒内容">
+                <input type="text" id="urlInput" placeholder="输入URL自动生成文章简介和全文图片">
             </div>
             <div id="language-select-wrapper">
                 <label for="languageSelect">输出语言：</label>
@@ -377,7 +377,7 @@
             const translations = {
                 'zh': {
                     title: 'PostAi',
-                    urlPlaceholder: '输入URL，一键生成高质量社媒内容',
+                    urlPlaceholder: '输入URL自动生成文章简介和全文图片',
                     languageLabel: '输出语言：',
                     generateButton: '生成',
                     shortContent: '短内容',
@@ -389,7 +389,7 @@
                 },
                 'en': {
                     title: 'PostAi',
-                    urlPlaceholder: 'Enter URL to generate high-quality social media content',
+                    urlPlaceholder: 'Enter URL to generate article summary and full text images',
                     languageLabel: 'Output Language:',
                     generateButton: 'Generate',
                     shortContent: 'Short Content',
